ft:fixing delete
